--- a/manage.html
+++ b/manage.html
@@ -129,10 +129,16 @@
             });
 
             async function fetchWithAuth(url, options = {}) {
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 30000); // Timeout de 30 secondes
                 const headers = { ...options.headers, 'Authorization': 'Basic ' + btoa('admin:' + currentPassword) };
-                const response = await fetch(url, { ...options, headers });
+                const response = await fetch(url, { ...options, headers, signal: controller.signal });
+                clearTimeout(timeoutId);
                 if (response.status === 401) { sessionStorage.removeItem('dashboardPassword'); throw new Error("Mot de passe incorrect."); }
-                if (!response.ok) throw new Error(`Erreur du serveur (status ${response.status})`);
+                if (!response.ok) {
+                    const errorText = await response.text();
+                    throw new Error(errorText || `Erreur du serveur (status ${response.status})`);
+                }
                 return response.json();
             }
 
@@ -152,7 +158,7 @@
                 } catch (error) {
                     passwordModal.classList.remove('hidden');
                     mainContent.classList.add('hidden');
-                    passwordError.textContent = error.message;
+                    passwordError.textContent = error.name === 'AbortError' ? "Le serveur a mis trop de temps à répondre. Veuillez réessayer." : error.message;
                 } finally {
                     submitBtn.disabled = false;
                     submitBtn.textContent = 'Valider';
