--- a/app.html
+++ b/app.html
@@ -53,7 +53,7 @@
             <button class="lang-btn" data-lang="zh">🇨🇳 ZH</button>
         </div>
         <div class="logo-container">
-            <img src="logosiena-1.png" alt="Logo Siena Paris">
+            <img src="/assets/logosiena-1.png" alt="Logo Siena Paris">
         </div>
         <h1 data-translate-key="main_title"></h1>
         <p data-translate-key="subtitle"></p>
