--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
     <div class="lang-selector">
-        <div class="logo-container">
-            <img src="/logosiena-1.png" alt="Logo Siena Paris">
+       <div class="logo-container">
+            <img src="/assets/logosiena-1.png" alt="Logo Siena Paris">
         </div>
         <h1>Choisissez votre langue</h1>
         <div class="button-grid">
