--- a/dashboard.html
+++ b/dashboard.html
@@ -23,6 +23,7 @@
         .logo-container img { width: 150px; height: auto; }
         .header{display:flex;align-items:center;justify-content:space-between;gap:20px;margin-bottom:20px;border-bottom:1px solid var(--border-color);padding-bottom:20px}
         .header h1{font-family:var(--font-serif);font-size:2.5rem;margin:0;color:var(--text-primary)}
+        .nav-links { display: flex; gap: 15px; }
         .content{display:grid;grid-template-columns:repeat(auto-fit, minmax(350px, 1fr));gap:40px;margin-top:30px;text-align:left;}
         .section-title {font-family:var(--font-serif);color:var(--brand-color);border-bottom:2px solid var(--border-color);padding-bottom:10px;margin-bottom:20px;font-size:1.8rem;}
         table{width:100%;border-collapse:collapse}
@@ -35,9 +36,9 @@
         td.count{text-align:right;font-weight:700;font-size:1.1rem}
         #message-area{padding:40px;text-align:center;font-size:1.2rem;color:var(--text-secondary)}
         .hidden{display:none !important}
-        .manage-link {background-color: #F7F1E9; color: var(--text-primary); padding: 8px 15px; border-radius: 8px; text-decoration: none; font-weight: 500; transition: all 0.2s;}
-        .manage-link:hover {background-color: var(--border-color);}
-        @media (max-width:768px){.content{grid-template-columns:1fr}.dashboard-container{padding:20px}.header{flex-direction:column;gap:15px; align-items: center;}.manage-link{margin-top:10px;}}
+        .nav-link {background-color: #F7F1E9; color: var(--text-primary); padding: 8px 15px; border-radius: 8px; text-decoration: none; font-weight: 500; transition: all 0.2s;}
+        .nav-link:hover {background-color: var(--border-color);}
+        @media (max-width:768px){.content{grid-template-columns:1fr}.dashboard-container{padding:20px}.header{flex-direction:column;gap:15px; align-items: center;}.nav-link{margin-top:10px;}}
     </style>
 </head>
 <body>
@@ -58,7 +59,10 @@
         </div>
         <header class="header">
             <h1>Tableau de Bord</h1>
-            <a href="/manage.html" class="manage-link">Gérer les Données</a>
+            <div class="nav-links">
+                <a href="/menu-performance.html" class="nav-link">Performance Menu</a>
+                <a href="/manage.html" class="nav-link">Gérer les Données</a>
+            </div>
         </header>
         <main id="main-content" class="hidden">
             <div class="content">
