--- a/manage.html
+++ b/manage.html
@@ -20,8 +20,8 @@
         .main-container{background-color:var(--surface-color);border-radius:16px;padding:28px 32px;box-shadow:0 10px 50px -10px rgba(133,93,67,.2);width:100%;max-width:900px;text-align:center;box-sizing:border-box;border:1px solid var(--border-color);animation:fadeIn .8s ease-out}
         .logo-container{text-align:center;margin-bottom:15px}
         .logo-container img{width:150px;height:auto}
-        .header{margin-bottom:20px;border-bottom:1px solid var(--border-color);padding-bottom:20px}
-        .header h1{font-family:var(--font-serif);font-size:2.5rem;margin:0;color:var(--text-primary);text-align:center}
+        .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:20px;border-bottom:1px solid var(--border-color);padding-bottom:20px}
+        .header h1{font-family:var(--font-serif);font-size:2.5rem;margin:0;color:var(--text-primary);text-align:center; flex-grow: 1;}
         .content{display:grid;grid-template-columns:repeat(auto-fit, minmax(350px, 1fr));gap:40px;margin-top:30px;text-align:left}
         .section-title{font-family:var(--font-serif);color:var(--brand-color);padding-bottom:10px;margin-top:20px;margin-bottom:20px;font-size:1.8rem}
         .item-list{list-style:none;padding:0;margin:0}
@@ -34,6 +34,8 @@
         .add-form button{background-color:var(--brand-color);color:#fff;border:none;padding:12px 20px;border-radius:8px;cursor:pointer;font-weight:600}
         .back-link{display:inline-block;margin-top:30px;color:var(--text-secondary);text-decoration:none;font-size:.9rem}
         .back-link:hover{color:var(--brand-color)}
+        .nav-link {background-color: #F7F1E9; color: var(--text-primary); padding: 8px 15px; border-radius: 8px; text-decoration: none; font-weight: 500; transition: all 0.2s;}
+        .nav-link:hover {background-color: var(--border-color);}
         .hidden{display:none !important}
         @media (max-width:768px){.content{grid-template-columns:1fr}}
     </style>
@@ -56,6 +58,7 @@
         </div>
         <header class="header">
             <h1>Gestion des Données</h1>
+            <a href="/menu-performance.html" class="nav-link">Performance Menu</a>
         </header>
         <div class="content">
             <section id="servers-section">
@@ -82,7 +85,6 @@
                     <button type="submit">Ajouter</button>
                 </form>
             </section>
-            <!-- La section pour gérer l'ambiance a été retirée -->
         </div>
         <a href="/dashboard.html" class="back-link">← Retour au tableau de bord</a>
     </div>
@@ -132,7 +134,6 @@
                     const errorText = await response.text();
                     throw new Error(errorText || `Erreur du serveur (status ${response.status})`);
                 }
-                // Gérer les réponses vides (ex: DELETE)
                 const contentType = response.headers.get("content-type");
                 if (contentType && contentType.indexOf("application/json") !== -1) {
                     return response.json();
