--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
         .logo-container img { width: 150px; height: auto; }
         .header{display:flex;align-items:center;justify-content:space-between;gap:20px;margin-bottom:20px;border-bottom:1px solid var(--border-color);padding-bottom:20px}
         .header h1{font-family:var(--font-serif);font-size:2.5rem;margin:0;color:var(--text-primary)}
-        .nav-links { display: flex; gap: 15px; }
+        .nav-links { display: flex; flex-wrap: wrap; gap: 15px; }
         .content{display:grid;grid-template-columns:repeat(auto-fit, minmax(350px, 1fr));gap:40px;margin-top:30px;text-align:left;}
         .section-title {font-family:var(--font-serif);color:var(--brand-color);border-bottom:2px solid var(--border-color);padding-bottom:10px;margin-bottom:20px;font-size:1.8rem;}
         table{width:100%;border-collapse:collapse}
@@ -60,6 +60,7 @@
         <header class="header">
             <h1>Tableau de Bord</h1>
             <div class="nav-links">
+                <a href="/internal-feedback.html" class="nav-link">Feedback Interne</a>
                 <a href="/menu-performance.html" class="nav-link">Performance Menu</a>
                 <a href="/manage.html" class="nav-link">Gérer les Données</a>
             </div>
