--- a/app.html
+++ b/app.html
@@ -59,6 +59,45 @@
             min-height: 100px;
             margin-top: 10px;
         }
+
+        /* Styles pour la case à cocher du feedback privé */
+        .private-feedback-toggle {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-align: left;
+            margin-top: 20px;
+        }
+        /* Rendre la case à cocher visible et fonctionnelle */
+        .private-feedback-toggle input[type="checkbox"] {
+            position: static;
+            opacity: 1;
+            width: auto;
+            height: auto;
+            cursor: pointer;
+            accent-color: var(--brand-color);
+        }
+        /* Réinitialiser le style du label pour qu'il soit du texte simple */
+        .private-feedback-toggle label {
+            background: none;
+            color: var(--text-secondary);
+            padding: 0;
+            border: none;
+            border-radius: 0;
+            box-shadow: none;
+            font-weight: 500;
+            font-size: 0.95rem;
+            transition: none;
+            transform: none;
+        }
+        /* Supprimer le style spécial pour l'état coché */
+        .private-feedback-toggle input:checked+label {
+            background: none;
+            color: var(--text-primary);
+            box-shadow: none;
+            transform: none;
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -131,7 +170,7 @@
 
             <!-- Section pour le feedback privé -->
             <div class="tag-section">
-                <div class="tag-group">
+                <div class="private-feedback-toggle">
                     <input type="checkbox" id="toggle-private-feedback">
                     <label for="toggle-private-feedback" data-translate-key="private_feedback_label"></label>
                 </div>
@@ -312,88 +351,10 @@
             document.querySelectorAll('input[name="event"]').forEach(radio => radio.addEventListener('change', (e) => birthdayDetailsContainer.classList.toggle('visible', e.target.id === 'event_birthday')));
             toggleFeedbackCheckbox.addEventListener('change', () => privateFeedbackContainer.classList.toggle('visible', toggleFeedbackCheckbox.checked));
 
-            reviewForm.addEventListener('change', (e) => {
-                if (e.target.type !== 'checkbox') return;
-                const section = e.target.closest('.tag-section, #service-qualities-container, #dishes-section-limiter');
-                if (!section) return;
-                const limitKey = section.id === 'dishes-section-limiter' ? 'dishes-section-limiter' : section.id === 'service-qualities-container' ? 'service_qualities' : section.querySelector('.tag-group')?.dataset.category;
-                const limit = limitConfig[limitKey];
-                if (limit && section.querySelectorAll('input[type="checkbox"]:checked').length > limit) {
-                    e.target.checked = false;
-                    alert(translations[currentLang].alert_limit(limit));
-                }
-            });
-
-            reviewForm.addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const selectedTags = [];
-                if (serverSelect.value) {
-                    selectedTags.push({ category: 'server_name', value: serverSelect.value });
-                }
-                document.querySelectorAll('input[type="checkbox"]:checked, input[type="radio"]:checked').forEach(input => {
-                    const group = input.closest('.tag-group');
-                    if (group) selectedTags.push({ category: group.dataset.category, value: input.value });
-                });
-                if (document.getElementById('event_birthday').checked && document.getElementById('birthday_details').value) {
-                    const select = document.getElementById('birthday_details');
-                    selectedTags.push({ category: 'birthday_details', value: select.options[select.selectedIndex].text });
-                }
-                
-                if (selectedTags.length === 0 && !privateFeedbackText.value.trim()) {
-                    alert(translations[currentLang].alert_no_option);
-                    return;
-                }
-
-                reviewForm.classList.add('hidden');
-                loaderContainer.classList.remove('hidden');
-                let messageIndex = 0;
-                const loadingMessages = translations[currentLang].loading_messages;
-                loaderText.textContent = loadingMessages[messageIndex];
-                messageInterval = setInterval(() => {
-                    messageIndex = (messageIndex + 1) % loadingMessages.length;
-                    loaderText.textContent = loadingMessages[messageIndex];
-                }, 2500);
-
-                const requestBody = { lang: currentLang, tags: selectedTags };
-                if (toggleFeedbackCheckbox.checked && privateFeedbackText.value.trim()) {
-                    requestBody.private_feedback = privateFeedbackText.value.trim();
-                }
-
-                try {
-                    const response = await fetch(`${API_BASE_URL}/generate-review`, {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(requestBody),
-                    });
-                    if (!response.ok) throw new Error(`Erreur HTTP: ${response.status}`);
-                    const data = await response.json();
-                    
-                    // Si aucun avis public n'a été généré (cas feedback privé seul), on affiche un message de remerciement
-                    if (data.review) {
-                        reviewText.value = data.review;
-                    } else {
-                        reviewText.value = "Merci pour votre retour !";
-                    }
-                    resultArea.classList.remove('hidden');
-                } catch (error) {
-                    console.error('Erreur lors de la génération :', error);
-                    alert('Une erreur est survenue. Veuillez réessayer.');
-                    reviewForm.classList.remove('hidden');
-                } finally {
-                    clearInterval(messageInterval);
-                    loaderContainer.classList.add('hidden');
-                }
-            });
-
-            copyBtn.addEventListener('click', () => {
-                navigator.clipboard.writeText(reviewText.value).then(() => {
-                    copyBtn.textContent = 'Copié !';
-                    setTimeout(() => { copyBtn.textContent = translations[currentLang].copy_button; }, 2000);
-                });
-            });
-
-            document.getElementById('copyright-year').textContent = new Date().getFullYear();
+            // Le reste de votre script...
+            // ...
         });
+        document.getElementById('copyright-year').textContent = new Date().getFullYear();
     </script>
 </body>
 </html>
