--- a/index.html
+++ b/index.html
@@ -36,12 +36,4 @@
         <h1>Choisissez votre langue</h1>
         <div class="button-grid">
             <a href="app.html#fr">🇫🇷 Français</a>
-            <a href="app.html#en">🇬🇧 English</a>
-            <a href="app.html#es">🇪🇸 Español</a>
-            <a href="app.html#it">🇮🇹 Italiano</a>
-            <a href="app.html#pt">🇵🇹 Português</a>
-            <a href="app.html#zh">🇨🇳 中文</a>
-        </div>
-    </div>
-</body>
-</html>
+            <a href="app.html#en">🇬🇧 E
